Linked to countdown js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Coming soon</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/countdown.js"></script>
 </head>
 <body>
 
