--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <script src="js/countdown.js"></script>
 </head>
 <body>
-
+<div class="bgimg">
+  <div class="topleft">
+    <p>Your logo</p>
+  </div>
+  <div class="middle">
+    <h1>Coming soon</h1>
+    <hr>
+    <p>35 days</p>
+  </div>
+  <div class="bottomleft">
+    <p>Text</p>
+  </div>
+</div>
 </body>
 </html>
