--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Coming soon</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/countdown.js"></script>
+  <link rel="stylesheet" href="/css/bootstrap.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <script src="/js/countdown.js"></script>
 </head>
 <body>
 <div class="bgimg">
