added working coming soon page

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Coming soon</title>
-  <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <script src="/js/countdown.js"></script>
+	<title>Coming soon</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="bgimg">
-  <div class="topleft">
-    <p>Your logo</p>
-  </div>
-  <div class="middle">
-    <h1>Coming soon</h1>
-    <hr>
-    <p>35 days</p>
-  </div>
-  <div class="bottomleft">
-    <p>Text</p>
-  </div>
-</div>
+	<div class="bgimg">
+		<div class="logo">
+			<img alt="Logo" src="img/logo.png" style="filter:brightness(0)invert(1);" width="200">
+		</div>
+		<div class="middle">
+			<h1>Coming soon</h1>
+			<p id="demo"></p>
+		</div>
+		<div class="bottomleft">
+			<p>By <a href="https://giacomolaw.me" target="_blank">Giacomo Lawrance</a></p>
+		</div>
+	</div>
+	<script src="js/countdown.js"></script>
 </body>
 </html>
